risc0/zirgen/dsl/test/repro/consecutive_binops.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: expected a primary expression here

component Top() {
  x += Reg(1);
}

